--- a/index.html
+++ b/index.html
@@ -206,6 +206,6 @@
     <audio id="projector-music" src="https://cdn.pixabay.com/audio/2022/11/22/audio_731a5518b1.mp3" loop></audio>
     <div id="root"></div>
     <div id="audio-container"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
